:wrench: , :fire: fix, remove: modal z-index + funcão de fechar modal sem uso

--- a/src/app/components/home/home.css
+++ b/src/app/components/home/home.css
@@ -134,6 +134,7 @@ option {
   width: 200px;
   position: relative;
 
+  z-index: 1000;
   display: flex;
   flex-direction: column;
 
